# ComplAI

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  LICENSE  PRODUCTION_READY_CHANGES.md  PROJECT_BLUEPRINT.md  README.md  SUBMISSION.md
backend/: .gitignore  main.py  pyproject.toml  railway.json  requirements.txt  run.py
backend/agents/: __init__.py  analyzer_agent.py  anomaly_agent.py  baseline_agent.py  comparison_agent.py  preprocessor_agent.py  profile_agent.py  rulebook_editor_agent.py  summarizer_agent.py  validator_agent.py
backend/data/: baselines.json  historical_transactions.json  initial_risk_state.json  users.json
backend/data/compliance/: cayman.json  malta.json  uae.json
backend/data/compliance/new_regulations/: cayman_v2.json  malta_v2.json  uae_v2.json
backend/models/: __init__.py  agent_log.py  compliance.py  risk.py  transaction.py  user.py
backend/scripts/: create_tables.sql  faker_generator.py  generate_historical.py  reset_supabase_regulatory.py  seed_supabase.py
backend/utils/: __init__.py  database.py  geo.py  llm.py  rulebook_guardrails.py  supabase_client.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/monitor/: page.tsx
frontend/app/regulatory/: page.tsx
frontend/components/layout/: Sidebar.tsx  ThemeToggle.tsx
frontend/components/monitor/: AIGuardian.tsx  BehavioralAnalysis.tsx  DataInjectionFlow.tsx  (+6 more)
frontend/context/: UsersContext.tsx
frontend/hooks/: useCompliance.ts  useInjectBatch.ts  useUsers.ts
frontend/lib/: api.ts  types.ts  utils.ts
(+11 files in other folders)
